# Thermostat

./: CMakeLists.txt
inc/: Thermostat.h
src/: CMakeLists.txt  Thermostat.cpp
tests/: CMakeLists.txt  Thermostat_tests.cpp
